// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaTree expanding $refs in allOf given very complex model with circular references, should bail out and display unmerged allOf 1`] = `
"└─ #
   ├─ type: object
   └─ children
      ├─ 0
      │  └─ #/properties/foo
      │     ├─ type: object
      │     └─ children
      │        └─ 0
      │           └─ #/properties/foo/properties/user
      │              ├─ combiner: allOf
      │              └─ children
      │                 └─ 0
      │                    └─ #/properties/foo/properties/user/allOf/0
      │                       ├─ type: object
      │                       └─ children
      │                          ├─ 0
      │                          │  └─ #/properties/foo/properties/user/allOf/0/properties/names
      │                          │     ├─ type: array
      │                          │     ├─ subtype: $ref[#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/name]
      │                          │     └─ children
      │                          └─ 1
      │                             └─ #/properties/foo/properties/user/allOf/0/properties/users
      │                                ├─ type: array
      │                                ├─ subtype: object
      │                                └─ children
      │                                   ├─ 0
      │                                   │  └─ #/properties/foo/properties/user/allOf/0/properties/users/items/properties/creation
      │                                   │     ├─ $ref: #/allOf/0/allOf/0/properties/foo
      │                                   │     └─ children
      │                                   ├─ 1
      │                                   │  └─ #/properties/foo/properties/user/allOf/0/properties/users/items/properties/foo
      │                                   │     ├─ $ref: #/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts
      │                                   │     └─ children
      │                                   └─ 2
      │                                      └─ #/properties/foo/properties/user/allOf/0/properties/users/items/properties/products
      │                                         ├─ $ref: #/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts
      │                                         └─ children
      └─ 1
         └─ #/properties/bar
            ├─ type: object
            └─ children
               └─ 0
                  └─ #/properties/bar/properties/foo
                     ├─ type: object
                     └─ children
                        └─ 0
                           └─ #/properties/bar/properties/foo/properties/user
                              ├─ combiner: allOf
                              └─ children
                                 └─ 0
                                    └─ #/properties/bar/properties/foo/properties/user/allOf/0
                                       ├─ type: object
                                       └─ children
                                          ├─ 0
                                          │  └─ #/properties/bar/properties/foo/properties/user/allOf/0/properties/names
                                          │     ├─ type: array
                                          │     ├─ subtype: $ref[#/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/name]
                                          │     └─ children
                                          └─ 1
                                             └─ #/properties/bar/properties/foo/properties/user/allOf/0/properties/users
                                                ├─ type: array
                                                ├─ subtype: object
                                                └─ children
                                                   ├─ 0
                                                   │  └─ #/properties/bar/properties/foo/properties/user/allOf/0/properties/users/items/properties/creation
                                                   │     ├─ $ref: #/allOf/0/allOf/0/properties/foo
                                                   │     └─ children
                                                   ├─ 1
                                                   │  └─ #/properties/bar/properties/foo/properties/user/allOf/0/properties/users/items/properties/foo
                                                   │     ├─ $ref: #/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts
                                                   │     └─ children
                                                   └─ 2
                                                      └─ #/properties/bar/properties/foo/properties/user/allOf/0/properties/users/items/properties/products
                                                         ├─ $ref: #/allOf/0/allOf/0/properties/foo/definitions/event/allOf/0/properties/contacts
                                                         └─ children
"
`;

exports[`SchemaTree tree correctness given anyOf combiner placed next to allOf given allOf merging disabled, should still merge 1`] = `
"├─ 0
│  └─ #
│     ├─ type: object
│     ├─ combiner: anyOf
│     └─ children
│        ├─ 0
│        │  └─ #/anyOf/0
│        │     ├─ type: object
│        │     ├─ combiner: allOf
│        │     └─ children
│        │        ├─ 0
│        │        │  └─ #/anyOf/0/allOf/0
│        │        │     ├─ type: object
│        │        │     ├─ required
│        │        │     │  └─ 0: type
│        │        │     └─ children
│        │        │        ├─ 0
│        │        │        │  └─ #/anyOf/0/allOf/0/properties/type
│        │        │        │     ├─ type: string
│        │        │        │     └─ enum
│        │        │        │        ├─ 0: admin
│        │        │        │        └─ 1: editor
│        │        │        └─ 1
│        │        │           └─ #/anyOf/0/allOf/0/properties/enabled
│        │        │              └─ type: boolean
│        │        └─ 1
│        │           └─ #/anyOf/0/allOf/1
│        │              ├─ type: object
│        │              └─ children
│        │                 ├─ 0
│        │                 │  └─ #/anyOf/0/allOf/1/properties/root
│        │                 │     └─ type: boolean
│        │                 ├─ 1
│        │                 │  └─ #/anyOf/0/allOf/1/properties/group
│        │                 │     └─ type: string
│        │                 └─ 2
│        │                    └─ #/anyOf/0/allOf/1/properties/expirationDate
│        │                       └─ type: string
│        └─ 1
│           └─ #/anyOf/1
│              ├─ type: object
│              ├─ combiner: allOf
│              └─ children
│                 ├─ 0
│                 │  └─ #/anyOf/1/allOf/0
│                 │     ├─ type: object
│                 │     ├─ required
│                 │     │  └─ 0: type
│                 │     └─ children
│                 │        ├─ 0
│                 │        │  └─ #/anyOf/1/allOf/0/properties/type
│                 │        │     ├─ type: string
│                 │        │     └─ enum
│                 │        │        ├─ 0: admin
│                 │        │        └─ 1: editor
│                 │        └─ 1
│                 │           └─ #/anyOf/1/allOf/0/properties/enabled
│                 │              └─ type: boolean
│                 └─ 1
│                    └─ #/anyOf/1/allOf/1
│                       ├─ type: object
│                       └─ children
│                          ├─ 0
│                          │  └─ #/anyOf/1/allOf/1/properties/supervisor
│                          │     └─ type: string
│                          └─ 1
│                             └─ #/anyOf/1/allOf/1/properties/key
│                                └─ type: string
└─ 1
   └─ #
      ├─ type: object
      ├─ combiner: allOf
      └─ children
         └─ 0
            └─ #/allOf/0
               ├─ type: object
               ├─ required
               │  └─ 0: type
               └─ children
                  ├─ 0
                  │  └─ #/allOf/0/properties/type
                  │     ├─ type: string
                  │     └─ enum
                  │        ├─ 0: admin
                  │        └─ 1: editor
                  └─ 1
                     └─ #/allOf/0/properties/enabled
                        └─ type: boolean
"
`;

exports[`SchemaTree tree correctness given anyOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"└─ #
   ├─ type: object
   ├─ combiner: anyOf
   └─ children
      ├─ 0
      │  └─ #/anyOf/0
      │     ├─ type: object
      │     ├─ required
      │     │  └─ 0: type
      │     └─ children
      │        ├─ 0
      │        │  └─ #/anyOf/0/properties/type
      │        │     ├─ type: string
      │        │     └─ enum
      │        │        ├─ 0: admin
      │        │        └─ 1: editor
      │        ├─ 1
      │        │  └─ #/anyOf/0/properties/enabled
      │        │     └─ type: boolean
      │        ├─ 2
      │        │  └─ #/anyOf/0/properties/root
      │        │     └─ type: boolean
      │        ├─ 3
      │        │  └─ #/anyOf/0/properties/group
      │        │     └─ type: string
      │        └─ 4
      │           └─ #/anyOf/0/properties/expirationDate
      │              └─ type: string
      └─ 1
         └─ #/anyOf/1
            ├─ type: object
            ├─ required
            │  └─ 0: type
            └─ children
               ├─ 0
               │  └─ #/anyOf/1/properties/type
               │     ├─ type: string
               │     └─ enum
               │        ├─ 0: admin
               │        └─ 1: editor
               ├─ 1
               │  └─ #/anyOf/1/properties/enabled
               │     └─ type: boolean
               ├─ 2
               │  └─ #/anyOf/1/properties/supervisor
               │     └─ type: string
               └─ 3
                  └─ #/anyOf/1/properties/key
                     └─ type: string
"
`;

exports[`SchemaTree tree correctness given oneOf combiner placed next to allOf given allOf merging disabled, should still merge 1`] = `
"├─ 0
│  └─ #
│     ├─ type: object
│     ├─ combiner: oneOf
│     └─ children
│        ├─ 0
│        │  └─ #/oneOf/0
│        │     ├─ type: object
│        │     ├─ combiner: allOf
│        │     └─ children
│        │        ├─ 0
│        │        │  └─ #/oneOf/0/allOf/0
│        │        │     ├─ type: object
│        │        │     ├─ required
│        │        │     │  └─ 0: type
│        │        │     └─ children
│        │        │        ├─ 0
│        │        │        │  └─ #/oneOf/0/allOf/0/properties/type
│        │        │        │     ├─ type: string
│        │        │        │     └─ enum
│        │        │        │        ├─ 0: admin
│        │        │        │        └─ 1: editor
│        │        │        └─ 1
│        │        │           └─ #/oneOf/0/allOf/0/properties/enabled
│        │        │              └─ type: boolean
│        │        └─ 1
│        │           └─ #/oneOf/0/allOf/1
│        │              ├─ type: object
│        │              └─ children
│        │                 ├─ 0
│        │                 │  └─ #/oneOf/0/allOf/1/properties/root
│        │                 │     └─ type: boolean
│        │                 ├─ 1
│        │                 │  └─ #/oneOf/0/allOf/1/properties/group
│        │                 │     └─ type: string
│        │                 └─ 2
│        │                    └─ #/oneOf/0/allOf/1/properties/expirationDate
│        │                       └─ type: string
│        └─ 1
│           └─ #/oneOf/1
│              ├─ type: object
│              ├─ combiner: allOf
│              └─ children
│                 ├─ 0
│                 │  └─ #/oneOf/1/allOf/0
│                 │     ├─ type: object
│                 │     ├─ required
│                 │     │  └─ 0: type
│                 │     └─ children
│                 │        ├─ 0
│                 │        │  └─ #/oneOf/1/allOf/0/properties/type
│                 │        │     ├─ type: string
│                 │        │     └─ enum
│                 │        │        ├─ 0: admin
│                 │        │        └─ 1: editor
│                 │        └─ 1
│                 │           └─ #/oneOf/1/allOf/0/properties/enabled
│                 │              └─ type: boolean
│                 └─ 1
│                    └─ #/oneOf/1/allOf/1
│                       ├─ type: object
│                       └─ children
│                          ├─ 0
│                          │  └─ #/oneOf/1/allOf/1/properties/supervisor
│                          │     └─ type: string
│                          └─ 1
│                             └─ #/oneOf/1/allOf/1/properties/key
│                                └─ type: string
└─ 1
   └─ #
      ├─ type: object
      ├─ combiner: allOf
      └─ children
         └─ 0
            └─ #/allOf/0
               ├─ type: object
               ├─ required
               │  └─ 0: type
               └─ children
                  ├─ 0
                  │  └─ #/allOf/0/properties/type
                  │     ├─ type: string
                  │     └─ enum
                  │        ├─ 0: admin
                  │        └─ 1: editor
                  └─ 1
                     └─ #/allOf/0/properties/enabled
                        └─ type: boolean
"
`;

exports[`SchemaTree tree correctness given oneOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"└─ #
   ├─ type: object
   ├─ combiner: oneOf
   └─ children
      ├─ 0
      │  └─ #/oneOf/0
      │     ├─ type: object
      │     ├─ required
      │     │  └─ 0: type
      │     └─ children
      │        ├─ 0
      │        │  └─ #/oneOf/0/properties/type
      │        │     ├─ type: string
      │        │     └─ enum
      │        │        ├─ 0: admin
      │        │        └─ 1: editor
      │        ├─ 1
      │        │  └─ #/oneOf/0/properties/enabled
      │        │     └─ type: boolean
      │        ├─ 2
      │        │  └─ #/oneOf/0/properties/root
      │        │     └─ type: boolean
      │        ├─ 3
      │        │  └─ #/oneOf/0/properties/group
      │        │     └─ type: string
      │        └─ 4
      │           └─ #/oneOf/0/properties/expirationDate
      │              └─ type: string
      └─ 1
         └─ #/oneOf/1
            ├─ type: object
            ├─ required
            │  └─ 0: type
            └─ children
               ├─ 0
               │  └─ #/oneOf/1/properties/type
               │     ├─ type: string
               │     └─ enum
               │        ├─ 0: admin
               │        └─ 1: editor
               ├─ 1
               │  └─ #/oneOf/1/properties/enabled
               │     └─ type: boolean
               ├─ 2
               │  └─ #/oneOf/1/properties/supervisor
               │     └─ type: string
               └─ 3
                  └─ #/oneOf/1/properties/key
                     └─ type: string
"
`;

exports[`SchemaTree tree correctness should match arrays/of-allofs.json 1`] = `
"└─ #
   ├─ type: object
   └─ children
      └─ 0
         └─ #/properties/array-all-objects
            ├─ type: array
            ├─ subtype: object
            └─ children
               ├─ 0
               │  └─ #/properties/array-all-objects/items/properties/foo
               │     └─ type: string
               └─ 1
                  └─ #/properties/array-all-objects/items/properties/bar
                     └─ type: string
"
`;
